--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "yargs": "^4.6.0"
     },
     "dependencies": {
-        "flickity": "^2.2.0"
+        "flickity": "^2.2.0",
+        "laravel-mix-purgecss": "^4.1.0"
     }
 }
