--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
-    "require": {
-        "tightenco/jigsaw": "^1.3"
+  "require": {
+    "tightenco/jigsaw": "^1.3",
+    "kitetail/zttp": "^0.6.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\Listeners\\": "listeners"
     }
+  }
 }
