--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "flickity": "^2.2.0",
         "laravel-mix-purgecss": "^4.1.0",
-        "vue": "^2.6.10"
+        "vue": "^2.6.11",
+        "vue-loader": "^15.9.0",
+        "vue-template-compiler": "^2.6.11"
     }
 }
